# groundediq

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/db/: models.py  session.py
apps/api/app/db/repositories/: chunks.py  documents.py
apps/api/app/ingestion/: chunker.py  metadata.py  normalizer.py  pipeline.py
apps/api/app/ingestion/parsers/: base.py  docx_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py
apps/api/app/routes/: ingest.py
apps/api/app/schemas/: ingest.py
apps/api/scripts/: seed_documents.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/: App.tsx
sample_data/raw/: agentic.md  rag.md
