[project]
name = "apii"
version = "0.1.0"
description = ""
authors = [
    {name = "John Moore",email = "john@ncub8.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.30.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pypdf (>=6.9.2,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "docx (>=0.2.4,<0.3.0)",
    "sqlalchemy-orm (>=1.2.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
